--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,19 @@
             <url>https://github.com/Kenny-Tang/kutils</url>
         </developer>
     </developers>
-    
+
     <dependencies>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.25</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -125,7 +136,7 @@
                     </execution>
                 </executions>
             </plugin>
-             <!-- Auto release after close -->
+            <!-- Auto release after close -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -198,7 +209,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
 
     <profiles>
         <profile>
