--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springframework.version>4.1.0.RELEASE</springframework.version>
-        <slf4j.version>1.7.12</slf4j.version>
         <org.apache.poi.version>3.10-FINAL</org.apache.poi.version>
         <junit.version>4.12</junit.version>
     </properties>
@@ -75,6 +74,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.22</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
