basic dataloader completed

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
-k.generator.jdbc.driver=xuqi
-k.generator.jdbc.username=xuqinb
-k.generator.jdbc.password=username 
-k.generator.jdbc.url=username
+k.generator.jdbc.driver=com.mysql.cj.jdbc.Driver
+k.generator.jdbc.username=root
+k.generator.jdbc.password=12345Qwert
+k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+jdbc:mysql://localhost:3306/test?serverTimezone=GMT&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8;
