--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info, stdout,file
+log4j.rootLogger=info,stdout
 
 log4j.logger.com.lefu.hecate=info
 log4j.logger.org.apache=info
@@ -8,11 +8,11 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd HH:mm:ss,SSS} %-5p[%t] %c - %m%n
 
-#log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.file.File=${catalina.home}/logs/k.log
-#log4j.appender.file.DatePattern='.'yyyyMMdd
-#log4j.appender.file.layout=org.apache.log4j.PatternLayout
-#log4j.appender.file.layout.ConversionPattern=%d{MM-dd HH:mm:ss,SSS} %-5p[%t] %c - %m%n
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File=${catalina.home}/logs/k.log
+log4j.appender.file.DatePattern='.'yyyyMMdd
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{MM-dd HH:mm:ss,SSS} %-5p[%t] %c - %m%n
  
 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
