添加模板，增加Typehandler

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,12 @@
-k.generator.jdbc.driver=com.mysql.cj.jdbc.Driver
+## MySQL 8+
+#k.generator.jdbc.driver=com.mysql.cj.jdbc.Driver
+#k.generator.jdbc.username=root
+#k.generator.jdbc.password=12345Qwert
+#k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+
+# MySQL 5.7
+k.generator.jdbc.driver=com.mysql.jdbc.Driver
 k.generator.jdbc.username=root
-k.generator.jdbc.password=12345Qwert
-k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
-jdbc:mysql://localhost:3306/test?serverTimezone=GMT&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8;
+k.generator.jdbc.password=123456
+k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?characterEncoding=UTF-8
+
