--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,4 +9,5 @@ k.generator.jdbc.driver=com.mysql.jdbc.Driver
 k.generator.jdbc.username=root
 k.generator.jdbc.password=123456
 k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?characterEncoding=UTF-8
+k.generator.jdbc.typehandler.decimal=com.github.tky.SelfTypeHandler
 
