upgrade poi version

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.kenny-tang</groupId>
     <artifactId>kutils</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <description>kutils will help you avoid repeat works on commom tools, such as Dates Strings Numberics.</description>
