--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,10 +4,19 @@
 #k.generator.jdbc.password=12345Qwert
 #k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
 
-# MySQL 5.7
-k.generator.jdbc.driver=com.mysql.jdbc.Driver
-k.generator.jdbc.username=root
-k.generator.jdbc.password=123456
-k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?characterEncoding=UTF-8
-k.generator.jdbc.typehandler.decimal=com.github.tky.SelfTypeHandler
+## MySQL 5.7
+#k.generator.jdbc.driver=com.mysql.jdbc.Driver
+#k.generator.jdbc.username=root
+#k.generator.jdbc.password=123456
+#k.generator.jdbc.url=jdbc:mysql://localhost:3306/kenny?characterEncoding=UTF-8
+#k.generator.jdbc.typehandler.decimal=com.github.tky.SelfTypeHandler
 
+# Oracle
+k.generator.jdbc.driver=oracle.jdbc.OracleDriver
+k.generator.jdbc.username=posp_boss
+k.generator.jdbc.password=Ab123456
+k.generator.jdbc.url=jdbc:oracle:thin:@192.168.6.49:1521:ORCL
+
+#k.generator.jdbc.typehandler.decimal=com.jf.activity.SelfTypeHandler
+
+k.generator.output.dir=C:/Users/Kenny/Desktop/
