update config file

--- a/src/test/resources/generator.properties
+++ b/src/test/resources/generator.properties
@@ -19,4 +19,4 @@ k.generator.jdbc.url=jdbc:oracle:thin:@192.168.6.49:1521:ORCL
 
 #k.generator.jdbc.typehandler.decimal=com.jf.activity.SelfTypeHandler
 
-k.generator.output.dir=C:/Users/Kenny/Desktop/
+#k.generator.output.dir=C:/Users/Kenny/Desktop/
