--- a/pom.xml
+++ b/pom.xml
@@ -74,13 +74,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>javaee</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>5</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
@@ -110,6 +103,13 @@
             <version>${org.apache.poi.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+          <version>1.5.0-b01</version>
+          <optional>true</optional>
+      	</dependency>
+        
         
         <!-- test denpencies -->
         <dependency>
