--- a/pom.xml
+++ b/pom.xml
@@ -104,12 +104,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-          <groupId>javax.mail</groupId>
-          <artifactId>mail</artifactId>
-          <version>1.5.0-b01</version>
-          <optional>true</optional>
-      	</dependency>
-        
+		  <groupId>com.sun.mail</groupId>
+		  <artifactId>javax.mail</artifactId>
+		  <version>1.6.2</version>
+		  <optional>true</optional>
+		</dependency>
         
         <!-- test denpencies -->
         <dependency>
