--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.fudaa</groupId>
+            <artifactId>jep</artifactId>
+            <version>2.4.2</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.23</version>
@@ -77,12 +83,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>2.0.3</version>
             <optional>true</optional>
         </dependency>
         <dependency>
